tdf#126657, tdf#145104: Don’t set language to none on defined styles

Language is used for more things than spell checking (localized digits,
accessibility, OpenType layout, and probably more).

A better way is needed to disable spell checking for parts of the
document by default while keeping the language alone, but right now I’m
reverting these changes because they are workarounds for essentially
cosmetic issues.

This reverts the following commits:

commit ca91beb9d983754a5cba9e3df1bf18295e6640a0
Author: Vladimir Glazounov <vg@openoffice.org>
Date:   Wed Jun 4 08:50:40 2008 +0000

    INTEGRATION: CWS sw30bf04 (1.51.2); FILE MERGED
    2008/05/13 07:20:17 fme 1.51.2.1: #i40133# rail: Set internet link style language to none to prevent spell checking

commit 137a1d5380e310a43d36932c643e1331a94fd70d
Author: Heiko Tietze <tietze.heiko@gmail.com>
Date:   Mon Jul 19 16:40:50 2021 +0200

    Resolves tdf#143066 - Language set to None for indices

Change-Id: Idc9455f3f04e661bd00a9829dd0f0916844dc8eb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140902
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>
(cherry picked from commit 2cca160f8bfc4597cf0ad3aaaf0017a5210ea0ec)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140958